:up: Config AXIOS on front to comunicate witch back
